# MCVComputation

./: CMakeLists.txt  README.md
models/: bunny.obj_256.binvox  bunny.obj_32.binvox  bunny.obj_64.binvox  bunny_solid.obj_256.binvox  bunny_solid.obj_32.binvox  bunny_solid.obj_64.binvox  cube.obj_128.binvox  cube.obj_32.binvox  cube.obj_8.binvox  cube_solid.obj_32.binvox  ogre.binvox  ogre_196.binvox  ogre_256.binvox  ogre_32.binvox  ogre_40.binvox  ogre_64.binvox  ogre_96.binvox  suzanne.binvox  teapot.binvox  teapot_big.binvox
src/: main.cpp
src/helpers/: MCV.h  Timer.h  Voxel.h
